[gd_scene load_steps=11 format=2]

[ext_resource path="res://CoinStealer.gd" type="Script" id=1]
[ext_resource path="res://assets/Enemies/alienBeige_walk1.png" type="Texture" id=2]
[ext_resource path="res://assets/Enemies/alienBeige_jump.png" type="Texture" id=3]
[ext_resource path="res://assets/Enemies/alienBeige_climb1.png" type="Texture" id=4]
[ext_resource path="res://assets/Enemies/alienBeige_walk2.png" type="Texture" id=5]
[ext_resource path="res://assets/Enemies/alienBeige_hurt.png" type="Texture" id=6]
[ext_resource path="res://assets/Enemies/alienBeige_climb2.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 7 ) ],
"loop": true,
"name": "happy",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "pushed",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 5 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20, 29 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 3.25, 21.75 )

[node name="CoinStealer" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -75, 110 )
scale = Vector2( 0.6, 0.6 )
frames = SubResource( 1 )
animation = "happy"
playing = true
offset = Vector2( 120.167, -185.667 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -4, -2 )
shape = SubResource( 2 )

[node name="PlayerSidesChecker" type="Area2D" parent="."]
position = Vector2( 54, 75 )
collision_layer = 0
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerSidesChecker"]
position = Vector2( -32, -75 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PlayerSidesChecker"]
position = Vector2( -83, -75 )
shape = SubResource( 4 )

[node name="FloorChecker" type="RayCast2D" parent="."]
position = Vector2( -14, 21 )
enabled = true
cast_to = Vector2( 0, 27 )
collision_mask = 2

[node name="WallCheckerRight" type="RayCast2D" parent="."]
position = Vector2( 22, 0 )
rotation = 4.71239
enabled = true
cast_to = Vector2( 0, 25 )
collision_mask = 2

[node name="WallCheckerLeft" type="RayCast2D" parent="."]
position = Vector2( -24, 0 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 25 )
collision_mask = 2

[node name="SpeedupTimer" type="Timer" parent="."]

[connection signal="body_entered" from="PlayerSidesChecker" to="." method="_on_PlayerSidesChecker_body_entered"]
[connection signal="timeout" from="SpeedupTimer" to="." method="_on_SpeedupTimer_timeout"]
